shadow/kleeDeploy/stp/src/parser/parsecvc.output
Nonterminals useless in grammar

   ForDecl


Terminals unused in grammar

   "EXCEPT"
   "END"
   "PUSH"
   "POP"
   '{'
   '.'


Rules useless in grammar

  107 ForDecl: FORMID_TOK ':' Type


Rules useless in parser due to conflicts

  100 Updates: Updates "WITH" '[' Expr ']' ":=" Expr


Grammar

    0 $accept: cmd $end

    1 cmd: other_cmd
    2    | other_cmd counterexample

    3 counterexample: COUNTEREXAMPLE_TOK ';'

    4 other_cmd: %empty
    5          | Query
    6          | VarDecls Query
    7          | other_cmd1 Query

    8 other_cmd1: VarDecls Asserts
    9           | Asserts
   10           | other_cmd1 VarDecls Asserts

   11 Asserts: Assert
   12        | Asserts Assert

   13 Assert: "ASSERT" Formula ';'

   14 Query: "QUERY" Formula ';'

   15 VarDecls: VarDecl ';'
   16         | VarDecls VarDecl ';'

   17 VarDecl: FORM_IDs ':' Type
   18        | FORM_IDs ':' Type '=' Expr
   19        | FORM_IDs ':' Type '=' Formula

   20 reverseFORM_IDs: STRING_TOK
   21                | STRING_TOK ',' reverseFORM_IDs

   22 FORM_IDs: reverseFORM_IDs

   23 Type: BvType
   24     | BoolType
   25     | ArrayType

   26 BvType: "BV" '(' NUMERAL_TOK ')'

   27 BoolType: "BOOLEAN"

   28 ArrayType: "ARRAY" BvType "OF" BvType

   29 IfExpr: "IF" Formula "THEN" Expr ElseRestExpr

   30 ElseRestExpr: "ELSE" Expr "ENDIF"
   31             | "ELSIF" Expr "THEN" Expr ElseRestExpr

   32 Formula: '(' Formula ')'
   33        | FORMID_TOK
   34        | FORMID_TOK '(' Expr ')'
   35        | "BOOLEXTRACT" '(' Expr ',' NUMERAL_TOK ')'
   36        | Expr '=' Expr
   37        | Expr "/=" Expr
   38        | "NOT" Formula
   39        | Formula "OR" Formula
   40        | Formula "NOR" Formula
   41        | Formula "AND" Formula
   42        | Formula "NAND" Formula
   43        | Formula "=>" Formula
   44        | Formula "<=>" Formula
   45        | Formula "XOR" Formula
   46        | "BVLT" '(' Expr ',' Expr ')'
   47        | "BVGT" '(' Expr ',' Expr ')'
   48        | "BVLE" '(' Expr ',' Expr ')'
   49        | "BVGE" '(' Expr ',' Expr ')'
   50        | "BVSLT" '(' Expr ',' Expr ')'
   51        | "BVSGT" '(' Expr ',' Expr ')'
   52        | "BVSLE" '(' Expr ',' Expr ')'
   53        | "BVSGE" '(' Expr ',' Expr ')'
   54        | IfForm
   55        | "TRUE"
   56        | "FALSE"
   57        | "LET" LetDecls "IN" Formula

   58 IfForm: "IF" Formula "THEN" Formula ElseRestForm

   59 ElseRestForm: "ELSE" Formula "ENDIF"
   60             | "ELSIF" Formula "THEN" Formula ElseRestForm
   61             | STRING_TOK

   62 Exprs: Expr
   63      | Exprs ',' Expr

   64 Expr: TERMID_TOK
   65     | '(' Expr ')'
   66     | BVCONST_TOK
   67     | "BOOLBV" '(' Formula ')'
   68     | NUMERAL_TOK BIN_BASED_NUMBER
   69     | NUMERAL_TOK DEC_BASED_NUMBER
   70     | NUMERAL_TOK HEX_BASED_NUMBER
   71     | Expr '[' Expr ']'
   72     | Expr '(' Expr ')'
   73     | Expr '[' NUMERAL_TOK ':' NUMERAL_TOK ']'
   74     | "~" Expr
   75     | Expr "&" Expr
   76     | Expr "|" Expr
   77     | "BVXOR" '(' Expr ',' Expr ')'
   78     | "BVNAND" '(' Expr ',' Expr ')'
   79     | "BVNOR" '(' Expr ',' Expr ')'
   80     | "BVXNOR" '(' Expr ',' Expr ')'
   81     | "BVSX" '(' Expr ',' NUMERAL_TOK ')'
   82     | Expr "@" Expr
   83     | Expr "<<" NUMERAL_TOK
   84     | Expr ">>" NUMERAL_TOK
   85     | Expr ">>" Expr
   86     | "BVPLUS" '(' NUMERAL_TOK ',' Exprs ')'
   87     | "BVSUB" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   88     | "BVUMINUS" '(' Expr ')'
   89     | "BVMULT" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   90     | "BVDIV" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   91     | "BVMOD" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   92     | "SBVDIV" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   93     | "SBVREM" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   94     | IfExpr
   95     | ArrayUpdateExpr
   96     | "LET" LetDecls "IN" Expr
   97     | STRING_TOK

   98 ArrayUpdateExpr: Expr "WITH" Updates

   99 Updates: '[' Expr ']' ":=" Expr
  100        | Updates "WITH" '[' Expr ']' ":=" Expr

  101 LetDecls: LetDecl
  102         | LetDecls ',' LetDecl

  103 LetDecl: STRING_TOK '=' Expr
  104        | STRING_TOK ':' Type '=' Expr
  105        | STRING_TOK '=' Formula
  106        | STRING_TOK ':' Type '=' Formula


Terminals, with rules where they appear

$end (0) 0
'(' (40) 26 32 34 35 46 47 48 49 50 51 52 53 65 67 72 77 78 79 80 81
    86 87 88 89 90 91 92 93
')' (41) 26 32 34 35 46 47 48 49 50 51 52 53 65 67 72 77 78 79 80 81
    86 87 88 89 90 91 92 93
',' (44) 21 35 46 47 48 49 50 51 52 53 63 77 78 79 80 81 86 87 89 90
    91 92 93 102
'.' (46)
':' (58) 17 18 19 73 104 106
';' (59) 3 13 14 15 16
'=' (61) 18 19 36 103 104 105 106
'[' (91) 71 73 99 100
']' (93) 71 73 99 100
'{' (123)
error (256)
"AND" (258) 41
"OR" (259) 39
"NOT" (260) 38
"EXCEPT" (261)
"XOR" (262) 45
"NAND" (263) 42
"NOR" (264) 40
"=>" (265) 43
"<=>" (266) 44
"IF" (267) 29 58
"THEN" (268) 29 31 58 60
"ELSE" (269) 30 59
"ELSIF" (270) 31 60
"END" (271)
"ENDIF" (272) 30 59
"/=" (273) 37
":=" (274) 99 100
"BV" (275) 26
"<<" (276) 83
">>" (277) 84 85
"BVPLUS" (278) 86
"BVSUB" (279) 87
"BVUMINUS" (280) 88
"BVMULT" (281) 89
"BVDIV" (282) 90
"BVMOD" (283) 91
"SBVDIV" (284) 92
"SBVREM" (285) 93
"~" (286) 74
"&" (287) 75
"|" (288) 76
"BVXOR" (289) 77
"BVNAND" (290) 78
"BVNOR" (291) 79
"BVXNOR" (292) 80
"@" (293) 82
"BVLT" (294) 46
"BVGT" (295) 47
"BVLE" (296) 48
"BVGE" (297) 49
"BVSLT" (298) 50
"BVSGT" (299) 51
"BVSLE" (300) 52
"BVSGE" (301) 53
"BOOLBV" (302) 67
"BVSX" (303) 81
"BOOLEXTRACT" (304) 35
"ASSERT" (305) 13
"QUERY" (306) 14
"BOOLEAN" (307) 27
"ARRAY" (308) 28
"OF" (309) 28
"WITH" (310) 98 100
"TRUE" (311) 55
"FALSE" (312) 56
"IN" (313) 57 96
"LET" (314) 57 96
"PUSH" (315)
"POP" (316)
BVCONST_TOK (317) 66
TERMID_TOK (318) 64
FORMID_TOK (319) 33 34
COUNTEREXAMPLE_TOK (320) 3
NUMERAL_TOK (321) 26 35 68 69 70 73 81 83 84 86 87 89 90 91 92 93
BIN_BASED_NUMBER (322) 68
DEC_BASED_NUMBER (323) 69
HEX_BASED_NUMBER (324) 70
STRING_TOK (325) 20 21 61 97 103 104 105 106


Nonterminals, with rules where they appear

$accept (81)
    on left: 0
cmd (82)
    on left: 1 2, on right: 0
counterexample (83)
    on left: 3, on right: 2
other_cmd (84)
    on left: 4 5 6 7, on right: 1 2
other_cmd1 (85)
    on left: 8 9 10, on right: 7 10
Asserts (86)
    on left: 11 12, on right: 8 9 10 12
Assert (87)
    on left: 13, on right: 11 12
Query (88)
    on left: 14, on right: 5 6 7
VarDecls (89)
    on left: 15 16, on right: 6 8 10 16
VarDecl (90)
    on left: 17 18 19, on right: 15 16
reverseFORM_IDs (91)
    on left: 20 21, on right: 21 22
FORM_IDs (92)
    on left: 22, on right: 17 18 19
Type (93)
    on left: 23 24 25, on right: 17 18 19 104 106
BvType (94)
    on left: 26, on right: 23 28
BoolType (95)
    on left: 27, on right: 24
ArrayType (96)
    on left: 28, on right: 25
IfExpr (97)
    on left: 29, on right: 94
ElseRestExpr (98)
    on left: 30 31, on right: 29 31
Formula (99)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51 52 53 54 55 56 57, on right: 13 14 19 29 32 38 39 40 41 42
    43 44 45 57 58 59 60 67 105 106
IfForm (100)
    on left: 58, on right: 54
ElseRestForm (101)
    on left: 59 60 61, on right: 58 60
Exprs (102)
    on left: 62 63, on right: 63 86
Expr (103)
    on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
    82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97, on right: 18 29
    30 31 34 35 36 37 46 47 48 49 50 51 52 53 62 63 65 71 72 73 74
    75 76 77 78 79 80 81 82 83 84 85 87 88 89 90 91 92 93 96 98 99
    100 103 104
ArrayUpdateExpr (104)
    on left: 98, on right: 95
Updates (105)
    on left: 99 100, on right: 98 100
LetDecls (106)
    on left: 101 102, on right: 57 96 102
LetDecl (107)
    on left: 103 104 105 106, on right: 101 102


State 0

    0 $accept: . cmd $end

    "ASSERT"    shift, and go to state 1
    "QUERY"     shift, and go to state 2
    STRING_TOK  shift, and go to state 3

    $default  reduce using rule 4 (other_cmd)

    cmd              go to state 4
    other_cmd        go to state 5
    other_cmd1       go to state 6
    Asserts          go to state 7
    Assert           go to state 8
    Query            go to state 9
    VarDecls         go to state 10
    VarDecl          go to state 11
    reverseFORM_IDs  go to state 12
    FORM_IDs         go to state 13


State 1

   13 Assert: "ASSERT" . Formula ';'

    "NOT"          shift, and go to state 14
    "IF"           shift, and go to state 15
    "BVPLUS"       shift, and go to state 16
    "BVSUB"        shift, and go to state 17
    "BVUMINUS"     shift, and go to state 18
    "BVMULT"       shift, and go to state 19
    "BVDIV"        shift, and go to state 20
    "BVMOD"        shift, and go to state 21
    "SBVDIV"       shift, and go to state 22
    "SBVREM"       shift, and go to state 23
    "~"            shift, and go to state 24
    "BVXOR"        shift, and go to state 25
    "BVNAND"       shift, and go to state 26
    "BVNOR"        shift, and go to state 27
    "BVXNOR"       shift, and go to state 28
    "BVLT"         shift, and go to state 29
    "BVGT"         shift, and go to state 30
    "BVLE"         shift, and go to state 31
    "BVGE"         shift, and go to state 32
    "BVSLT"        shift, and go to state 33
    "BVSGT"        shift, and go to state 34
    "BVSLE"        shift, and go to state 35
    "BVSGE"        shift, and go to state 36
    "BOOLBV"       shift, and go to state 37
    "BVSX"         shift, and go to state 38
    "BOOLEXTRACT"  shift, and go to state 39
    "TRUE"         shift, and go to state 40
    "FALSE"        shift, and go to state 41
    "LET"          shift, and go to state 42
    '('            shift, and go to state 43
    BVCONST_TOK    shift, and go to state 44
    TERMID_TOK     shift, and go to state 45
    FORMID_TOK     shift, and go to state 46
    NUMERAL_TOK    shift, and go to state 47
    STRING_TOK     shift, and go to state 48

    IfExpr           go to state 49
    Formula          go to state 50
    IfForm           go to state 51
    Expr             go to state 52
    ArrayUpdateExpr  go to state 53


State 2

   14 Query: "QUERY" . Formula ';'

    "NOT"          shift, and go to state 14
    "IF"           shift, and go to state 15
    "BVPLUS"       shift, and go to state 16
    "BVSUB"        shift, and go to state 17
    "BVUMINUS"     shift, and go to state 18
    "BVMULT"       shift, and go to state 19
    "BVDIV"        shift, and go to state 20
    "BVMOD"        shift, and go to state 21
    "SBVDIV"       shift, and go to state 22
    "SBVREM"       shift, and go to state 23
    "~"            shift, and go to state 24
    "BVXOR"        shift, and go to state 25
    "BVNAND"       shift, and go to state 26
    "BVNOR"        shift, and go to state 27
    "BVXNOR"       shift, and go to state 28
    "BVLT"         shift, and go to state 29
    "BVGT"         shift, and go to state 30
    "BVLE"         shift, and go to state 31
    "BVGE"         shift, and go to state 32
    "BVSLT"        shift, and go to state 33
    "BVSGT"        shift, and go to state 34
    "BVSLE"        shift, and go to state 35
    "BVSGE"        shift, and go to state 36
    "BOOLBV"       shift, and go to state 37
    "BVSX"         shift, and go to state 38
    "BOOLEXTRACT"  shift, and go to state 39
    "TRUE"         shift, and go to state 40
    "FALSE"        shift, and go to state 41
    "LET"          shift, and go to state 42
    '('            shift, and go to state 43
    BVCONST_TOK    shift, and go to state 44
    TERMID_TOK     shift, and go to state 45
    FORMID_TOK     shift, and go to state 46
    NUMERAL_TOK    shift, and go to state 47
    STRING_TOK     shift, and go to state 48

    IfExpr           go to state 49
    Formula          go to state 54
    IfForm           go to state 51
    Expr             go to state 52
    ArrayUpdateExpr  go to state 53


State 3

   20 reverseFORM_IDs: STRING_TOK .
   21                | STRING_TOK . ',' reverseFORM_IDs

    ','  shift, and go to state 55

    $default  reduce using rule 20 (reverseFORM_IDs)


State 4

    0 $accept: cmd . $end

    $end  shift, and go to state 56


State 5

    1 cmd: other_cmd .
    2    | other_cmd . counterexample

    COUNTEREXAMPLE_TOK  shift, and go to state 57

    $default  reduce using rule 1 (cmd)

    counterexample  go to state 58


State 6

    7 other_cmd: other_cmd1 . Query
   10 other_cmd1: other_cmd1 . VarDecls Asserts

    "QUERY"     shift, and go to state 2
    STRING_TOK  shift, and go to state 3

    Query            go to state 59
    VarDecls         go to state 60
    VarDecl          go to state 11
    reverseFORM_IDs  go to state 12
    FORM_IDs         go to state 13


State 7

    9 other_cmd1: Asserts .
   12 Asserts: Asserts . Assert

    "ASSERT"  shift, and go to state 1

    $default  reduce using rule 9 (other_cmd1)

    Assert  go to state 61


State 8

   11 Asserts: Assert .

    $default  reduce using rule 11 (Asserts)


State 9

    5 other_cmd: Query .

    $default  reduce using rule 5 (other_cmd)


State 10

    6 other_cmd: VarDecls . Query
    8 other_cmd1: VarDecls . Asserts
   16 VarDecls: VarDecls . VarDecl ';'

    "ASSERT"    shift, and go to state 1
    "QUERY"     shift, and go to state 2
    STRING_TOK  shift, and go to state 3

    Asserts          go to state 62
    Assert           go to state 8
    Query            go to state 63
    VarDecl          go to state 64
    reverseFORM_IDs  go to state 12
    FORM_IDs         go to state 13


State 11

   15 VarDecls: VarDecl . ';'

    ';'  shift, and go to state 65


State 12

   22 FORM_IDs: reverseFORM_IDs .

    $default  reduce using rule 22 (FORM_IDs)


State 13

   17 VarDecl: FORM_IDs . ':' Type
   18        | FORM_IDs . ':' Type '=' Expr
   19        | FORM_IDs . ':' Type '=' Formula

    ':'  shift, and go to state 66


State 14

   38 Formula: "NOT" . Formula

    "NOT"          shift, and go to state 14
    "IF"           shift, and go to state 15
    "BVPLUS"       shift, and go to state 16
    "BVSUB"        shift, and go to state 17
    "BVUMINUS"     shift, and go to state 18
    "BVMULT"       shift, and go to state 19
    "BVDIV"        shift, and go to state 20
    "BVMOD"        shift, and go to state 21
    "SBVDIV"       shift, and go to state 22
    "SBVREM"       shift, and go to state 23
    "~"            shift, and go to state 24
    "BVXOR"        shift, and go to state 25
    "BVNAND"       shift, and go to state 26
    "BVNOR"        shift, and go to state 27
    "BVXNOR"       shift, and go to state 28
    "BVLT"         shift, and go to state 29
    "BVGT"         shift, and go to state 30
    "BVLE"         shift, and go to state 31
    "BVGE"         shift, and go to state 32
    "BVSLT"        shift, and go to state 33
    "BVSGT"        shift, and go to state 34
    "BVSLE"        shift, and go to state 35
    "BVSGE"        shift, and go to state 36
    "BOOLBV"       shift, and go to state 37
    "BVSX"         shift, and go to state 38
    "BOOLEXTRACT"  shift, and go to state 39
    "TRUE"         shift, and go to state 40
    "FALSE"        shift, and go to state 41
    "LET"          shift, and go to state 42
    '('            shift, and go to state 43
    BVCONST_TOK    shift, and go to state 44
    TERMID_TOK     shift, and go to state 45
    FORMID_TOK     shift, and go to state 46
    NUMERAL_TOK    shift, and go to state 47
    STRING_TOK     shift, and go to state 48

    IfExpr           go to state 49
    Formula          go to state 67
    IfForm           go to state 51
    Expr             go to state 52
    ArrayUpdateExpr  go to state 53


State 15

   29 IfExpr: "IF" . Formula "THEN" Expr ElseRestExpr
   58 IfForm: "IF" . Formula "THEN" Formula ElseRestForm

    "NOT"          shift, and go to state 14
    "IF"           shift, and go to state 15
    "BVPLUS"       shift, and go to state 16
    "BVSUB"        shift, and go to state 17
    "BVUMINUS"     shift, and go to state 18
    "BVMULT"       shift, and go to state 19
    "BVDIV"        shift, and go to state 20
    "BVMOD"        shift, and go to state 21
    "SBVDIV"       shift, and go to state 22
    "SBVREM"       shift, and go to state 23
    "~"            shift, and go to state 24
    "BVXOR"        shift, and go to state 25
    "BVNAND"       shift, and go to state 26
    "BVNOR"        shift, and go to state 27
    "BVXNOR"       shift, and go to state 28
    "BVLT"         shift, and go to state 29
    "BVGT"         shift, and go to state 30
    "BVLE"         shift, and go to state 31
    "BVGE"         shift, and go to state 32
    "BVSLT"        shift, and go to state 33
    "BVSGT"        shift, and go to state 34
    "BVSLE"        shift, and go to state 35
    "BVSGE"        shift, and go to state 36
    "BOOLBV"       shift, and go to state 37
    "BVSX"         shift, and go to state 38
    "BOOLEXTRACT"  shift, and go to state 39
    "TRUE"         shift, and go to state 40
    "FALSE"        shift, and go to state 41
    "LET"          shift, and go to state 42
    '('            shift, and go to state 43
    BVCONST_TOK    shift, and go to state 44
    TERMID_TOK     shift, and go to state 45
    FORMID_TOK     shift, and go to state 46
    NUMERAL_TOK    shift, and go to state 47
    STRING_TOK     shift, and go to state 48

    IfExpr           go to state 49
    Formula          go to state 68
    IfForm           go to state 51
    Expr             go to state 52
    ArrayUpdateExpr  go to state 53


State 16

   86 Expr: "BVPLUS" . '(' NUMERAL_TOK ',' Exprs ')'

    '('  shift, and go to state 69


State 17

   87 Expr: "BVSUB" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 70


State 18

   88 Expr: "BVUMINUS" . '(' Expr ')'

    '('  shift, and go to state 71


State 19

   89 Expr: "BVMULT" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 72


State 20

   90 Expr: "BVDIV" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 73


State 21

   91 Expr: "BVMOD" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 74


State 22

   92 Expr: "SBVDIV" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 75


State 23

   93 Expr: "SBVREM" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 76


State 24

   74 Expr: "~" . Expr

    "IF"         shift, and go to state 77
    "BVPLUS"     shift, and go to state 16
    "BVSUB"      shift, and go to state 17
    "BVUMINUS"   shift, and go to state 18
    "BVMULT"     shift, and go to state 19
    "BVDIV"      shift, and go to state 20
    "BVMOD"      shift, and go to state 21
    "SBVDIV"     shift, and go to state 22
    "SBVREM"     shift, and go to state 23
    "~"          shift, and go to state 24
    "BVXOR"      shift, and go to state 25
    "BVNAND"     shift, and go to state 26
    "BVNOR"      shift, and go to state 27
    "BVXNOR"     shift, and go to state 28
    "BOOLBV"     shift, and go to state 37
    "BVSX"       shift, and go to state 38
    "LET"        shift, and go to state 78
    '('          shift, and go to state 79
    BVCONST_TOK  shift, and go to state 44
    TERMID_TOK   shift, and go to state 45
    NUMERAL_TOK  shift, and go to state 47
    STRING_TOK   shift, and go to state 48

    IfExpr           go to state 49
    Expr             go to state 80
    ArrayUpdateExpr  go to state 53


State 25

   77 Expr: "BVXOR" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 81


State 26

   78 Expr: "BVNAND" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 82


State 27

   79 Expr: "BVNOR" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 83


State 28

   80 Expr: "BVXNOR" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 84


State 29

   46 Formula: "BVLT" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 85


State 30

   47 Formula: "BVGT" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 86


State 31

   48 Formula: "BVLE" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 87


State 32

   49 Formula: "BVGE" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 88


State 33

   50 Formula: "BVSLT" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 89


State 34

   51 Formula: "BVSGT" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 90


State 35

   52 Formula: "BVSLE" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 91


State 36

   53 Formula: "BVSGE" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 92


State 37

   67 Expr: "BOOLBV" . '(' Formula ')'

    '('  shift, and go to state 93


State 38

   81 Expr: "BVSX" . '(' Expr ',' NUMERAL_TOK ')'

    '('  shift, and go to state 94


State 39

   35 Formula: "BOOLEXTRACT" . '(' Expr ',' NUMERAL_TOK ')'

    '('  shift, and go to state 95


State 40

   55 Formula: "TRUE" .

    $default  reduce using rule 55 (Formula)


State 41

   56 Formula: "FALSE" .

    $default  reduce using rule 56 (Formula)


State 42

   57 Formula: "LET" . LetDecls "IN" Formula
   96 Expr: "LET" . LetDecls "IN" Expr

    STRING_TOK  shift, and go to state 96

    LetDecls  go to state 97
    LetDecl   go to state 98


State 43

   32 Formula: '(' . Formula ')'
   65 Expr: '(' . Expr ')'

    "NOT"          shift, and go to state 14
    "IF"           shift, and go to state 15
    "BVPLUS"       shift, and go to state 16
    "BVSUB"        shift, and go to state 17
    "BVUMINUS"     shift, and go to state 18
    "BVMULT"       shift, and go to state 19
    "BVDIV"        shift, and go to state 20
    "BVMOD"        shift, and go to state 21
    "SBVDIV"       shift, and go to state 22
    "SBVREM"       shift, and go to state 23
    "~"            shift, and go to state 24
    "BVXOR"        shift, and go to state 25
    "BVNAND"       shift, and go to state 26
    "BVNOR"        shift, and go to state 27
    "BVXNOR"       shift, and go to state 28
    "BVLT"         shift, and go to state 29
    "BVGT"         shift, and go to state 30
    "BVLE"         shift, and go to state 31
    "BVGE"         shift, and go to state 32
    "BVSLT"        shift, and go to state 33
    "BVSGT"        shift, and go to state 34
    "BVSLE"        shift, and go to state 35
    "BVSGE"        shift, and go to state 36
    "BOOLBV"       shift, and go to state 37
    "BVSX"         shift, and go to state 38
    "BOOLEXTRACT"  shift, and go to state 39
    "TRUE"         shift, and go to state 40
    "FALSE"        shift, and go to state 41
    "LET"          shift, and go to state 42
    '('            shift, and go to state 43
    BVCONST_TOK    shift, and go to state 44
    TERMID_TOK     shift, and go to state 45
    FORMID_TOK     shift, and go to state 46
    NUMERAL_TOK    shift, and go to state 47
    STRING_TOK     shift, and go to state 48

    IfExpr           go to state 49
    Formula          go to state 99
    IfForm           go to state 51
    Expr             go to state 100
    ArrayUpdateExpr  go to state 53


State 44

   66 Expr: BVCONST_TOK .

    $default  reduce using rule 66 (Expr)


State 45

   64 Expr: TERMID_TOK .

    $default  reduce using rule 64 (Expr)


State 46

   33 Formula: FORMID_TOK .
   34        | FORMID_TOK . '(' Expr ')'

    '('  shift, and go to state 101

    $default  reduce using rule 33 (Formula)


State 47

   68 Expr: NUMERAL_TOK . BIN_BASED_NUMBER
   69     | NUMERAL_TOK . DEC_BASED_NUMBER
   70     | NUMERAL_TOK . HEX_BASED_NUMBER

    BIN_BASED_NUMBER  shift, and go to state 102
    DEC_BASED_NUMBER  shift, and go to state 103
    HEX_BASED_NUMBER  shift, and go to state 104


State 48

   97 Expr: STRING_TOK .

    $default  reduce using rule 97 (Expr)


State 49

   94 Expr: IfExpr .

    $default  reduce using rule 94 (Expr)


State 50

   13 Assert: "ASSERT" Formula . ';'
   39 Formula: Formula . "OR" Formula
   40        | Formula . "NOR" Formula
   41        | Formula . "AND" Formula
   42        | Formula . "NAND" Formula
   43        | Formula . "=>" Formula
   44        | Formula . "<=>" Formula
   45        | Formula . "XOR" Formula

    "AND"   shift, and go to state 105
    "OR"    shift, and go to state 106
    "XOR"   shift, and go to state 107
    "NAND"  shift, and go to state 108
    "NOR"   shift, and go to state 109
    "=>"    shift, and go to state 110
    "<=>"   shift, and go to state 111
    ';'     shift, and go to state 112


State 51

   54 Formula: IfForm .

    $default  reduce using rule 54 (Formula)


State 52

   36 Formula: Expr . '=' Expr
   37        | Expr . "/=" Expr
   71 Expr: Expr . '[' Expr ']'
   72     | Expr . '(' Expr ')'
   73     | Expr . '[' NUMERAL_TOK ':' NUMERAL_TOK ']'
   75     | Expr . "&" Expr
   76     | Expr . "|" Expr
   82     | Expr . "@" Expr
   83     | Expr . "<<" NUMERAL_TOK
   84     | Expr . ">>" NUMERAL_TOK
   85     | Expr . ">>" Expr
   98 ArrayUpdateExpr: Expr . "WITH" Updates

    "/="    shift, and go to state 113
    "<<"    shift, and go to state 114
    ">>"    shift, and go to state 115
    "&"     shift, and go to state 116
    "|"     shift, and go to state 117
    "@"     shift, and go to state 118
    "WITH"  shift, and go to state 119
    '='     shift, and go to state 120
    '['     shift, and go to state 121
    '('     shift, and go to state 122


State 53

   95 Expr: ArrayUpdateExpr .

    $default  reduce using rule 95 (Expr)


State 54

   14 Query: "QUERY" Formula . ';'
   39 Formula: Formula . "OR" Formula
   40        | Formula . "NOR" Formula
   41        | Formula . "AND" Formula
   42        | Formula . "NAND" Formula
   43        | Formula . "=>" Formula
   44        | Formula . "<=>" Formula
   45        | Formula . "XOR" Formula

    "AND"   shift, and go to state 105
    "OR"    shift, and go to state 106
    "XOR"   shift, and go to state 107
    "NAND"  shift, and go to state 108
    "NOR"   shift, and go to state 109
    "=>"    shift, and go to state 110
    "<=>"   shift, and go to state 111
    ';'     shift, and go to state 123


State 55

   21 reverseFORM_IDs: STRING_TOK ',' . reverseFORM_IDs

    STRING_TOK  shift, and go to state 3

    reverseFORM_IDs  go to state 124


State 56

    0 $accept: cmd $end .

    $default  accept


State 57

    3 counterexample: COUNTEREXAMPLE_TOK . ';'

    ';'  shift, and go to state 125


State 58

    2 cmd: other_cmd counterexample .

    $default  reduce using rule 2 (cmd)


State 59

    7 other_cmd: other_cmd1 Query .

    $default  reduce using rule 7 (other_cmd)


State 60

   10 other_cmd1: other_cmd1 VarDecls . Asserts
   16 VarDecls: VarDecls . VarDecl ';'

    "ASSERT"    shift, and go to state 1
    STRING_TOK  shift, and go to state 3

    Asserts          go to state 126
    Assert           go to state 8
    VarDecl          go to state 64
    reverseFORM_IDs  go to state 12
    FORM_IDs         go to state 13


State 61

   12 Asserts: Asserts Assert .

    $default  reduce using rule 12 (Asserts)


State 62

    8 other_cmd1: VarDecls Asserts .
   12 Asserts: Asserts . Assert

    "ASSERT"  shift, and go to state 1

    $default  reduce using rule 8 (other_cmd1)

    Assert  go to state 61


State 63

    6 other_cmd: VarDecls Query .

    $default  reduce using rule 6 (other_cmd)


State 64

   16 VarDecls: VarDecls VarDecl . ';'

    ';'  shift, and go to state 127


State 65

   15 VarDecls: VarDecl ';' .

    $default  reduce using rule 15 (VarDecls)


State 66

   17 VarDecl: FORM_IDs ':' . Type
   18        | FORM_IDs ':' . Type '=' Expr
   19        | FORM_IDs ':' . Type '=' Formula

    "BV"       shift, and go to state 128
    "BOOLEAN"  shift, and go to state 129
    "ARRAY"    shift, and go to state 130

    Type       go to state 131
    BvType     go to state 132
    BoolType   go to state 133
    ArrayType  go to state 134


State 67

   38 Formula: "NOT" Formula .
   39        | Formula . "OR" Formula
   40        | Formula . "NOR" Formula
   41        | Formula . "AND" Formula
   42        | Formula . "NAND" Formula
   43        | Formula . "=>" Formula
   44        | Formula . "<=>" Formula
   45        | Formula . "XOR" Formula

    $default  reduce using rule 38 (Formula)


State 68

   29 IfExpr: "IF" Formula . "THEN" Expr ElseRestExpr
   39 Formula: Formula . "OR" Formula
   40        | Formula . "NOR" Formula
   41        | Formula . "AND" Formula
   42        | Formula . "NAND" Formula
   43        | Formula . "=>" Formula
   44        | Formula . "<=>" Formula
   45        | Formula . "XOR" Formula
   58 IfForm: "IF" Formula . "THEN" Formula ElseRestForm

    "AND"   shift, and go to state 105
    "OR"    shift, and go to state 106
    "XOR"   shift, and go to state 107
    "NAND"  shift, and go to state 108
    "NOR"   shift, and go to state 109
    "=>"    shift, and go to state 110
    "<=>"   shift, and go to state 111
    "THEN"  shift, and go to state 135


State 69

   86 Expr: "BVPLUS" '(' . NUMERAL_TOK ',' Exprs ')'

    NUMERAL_TOK  shift, and go to state 136


State 70

   87 Expr: "BVSUB" '(' . NUMERAL_TOK ',' Expr ',' Expr ')'

    NUMERAL_TOK  shift, and go to state 137


State 71

   88 Expr: "BVUMINUS" '(' . Expr ')'
